// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-menu-button Borderless 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--borderless"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          eBay Menu without borders!
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 1
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button Default 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          eBay Menu
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 1 that has very long text
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button Disabled 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          eBay Menu
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 1 that has very long text
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button Expanded 1`] = `
<span
  className="menu-button menu-button--expanded"
>
  <button
    aria-expanded={true}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          eBay Menu
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 1 that has very long text
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button Fixed Width 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          Menu has a button width
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu-button__menu--fix-width menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 1 that has very long text
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button Multi-Select Menu Button 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          Filter
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        aria-checked={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitemcheckbox"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          Snickers
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        aria-checked={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitemcheckbox"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          T-Shirts
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        aria-checked={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitemcheckbox"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          Pants
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button Priorities 1`] = `
Array [
  <span
    className="menu-button"
  >
    <button
      a11y-text="Menu"
      aria-expanded={false}
      aria-haspopup={true}
      aria-live={null}
      className="btn menu-button__button btn--primary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Primary
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--chevron-down-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
    <div
      autofocus={true}
      className="menu-button__menu menu"
      tabIndex={-1}
    >
      <div
        className="menu__items"
        role="menu"
      >
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 1
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 2
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 3
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>,
  <span
    className="menu-button"
  >
    <button
      a11y-text="Menu"
      aria-expanded={false}
      aria-haspopup={true}
      aria-live={null}
      className="btn menu-button__button btn--tertiary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Tertiary
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--chevron-down-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
    <div
      autofocus={true}
      className="menu-button__menu menu"
      tabIndex={-1}
    >
      <div
        className="menu__items"
        role="menu"
      >
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 1
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 2
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 3
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>,
]
`;

exports[`Storyshots ebay-menu-button Reverse (Menu grows to the left) 1`] = `
<div
  style={
    Object {
      "marginLeft": "100px",
    }
  }
>
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-live={null}
      className="btn menu-button__button btn--secondary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Menu grows to the left
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--chevron-down-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
    <div
      autofocus={true}
      className="menu-button__menu menu-button__menu--reverse menu"
      tabIndex={-1}
    >
      <div
        className="menu__items"
        role="menu"
      >
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 1 that has very very long text
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 2
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 3
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`Storyshots ebay-menu-button Single-Select Menu Button (collapse on click) 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          Sort order: Price
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        aria-checked={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitemradio"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          Date
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        aria-checked={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitemradio"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          Price
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        aria-checked={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitemradio"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          Relevance
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button Single-Select Menu Button (item.checked) 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          Sort order
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        aria-checked={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitemradio"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          Date
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        aria-checked={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitemradio"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          Price
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        aria-checked={false}
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitemradio"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          Relevance
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button Single-Select Menu Button (menu.checked) 1`] = `
Array [
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-live={null}
      className="btn menu-button__button btn--secondary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Topic: Phones
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--chevron-down-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
    <div
      autofocus={true}
      className="menu-button__menu menu"
      tabIndex={-1}
    >
      <div
        className="menu__items"
        role="menu"
      >
        <div
          aria-checked={false}
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitemradio"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            Cars
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          aria-checked={false}
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitemradio"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            Phones
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          aria-checked={false}
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitemradio"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            Computers
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>,
  " ",
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-live={null}
      className="btn menu-button__button btn--secondary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Sort order: Relevance
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--chevron-down-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
    <div
      autofocus={true}
      className="menu-button__menu menu"
      tabIndex={-1}
    >
      <div
        className="menu__items"
        role="menu"
      >
        <div
          aria-checked={false}
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitemradio"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            Date
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          aria-checked={false}
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitemradio"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            Price
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          aria-checked={false}
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitemradio"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            Relevance
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>,
]
`;

exports[`Storyshots ebay-menu-button Variants 1`] = `
Array [
  <h3>
    Button
  </h3>,
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Menu inside the form"
      aria-live={null}
      className="btn menu-button__button btn--secondary"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Button
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--chevron-down-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
    <div
      autofocus={true}
      className="menu-button__menu menu"
      tabIndex={-1}
    >
      <div
        className="menu__items"
        role="menu"
      >
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 1
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 2
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 3
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>,
  <h3>
    Form
  </h3>,
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Menu inside the form"
      aria-live={null}
      className="btn menu-button__button btn--form"
      onClick={[Function]}
      onKeyDown={[Function]}
    >
      <span
        className="btn__cell"
      >
        <span
          className="btn__text"
        >
          <span>
            Form
          </span>
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--chevron-down-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-chevron-down-16"
          />
        </svg>
      </span>
    </button>
    <div
      autofocus={true}
      className="menu-button__menu menu"
      tabIndex={-1}
    >
      <div
        className="menu__items"
        role="menu"
      >
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 1
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 2
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 3
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>,
  <h3>
    Overflow
  </h3>,
  <span
    className="menu-button"
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="Menu"
      className="menu-button__button icon-btn"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="icon icon--overflow-horizontal-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-overflow-horizontal-16"
        />
      </svg>
    </button>
    <div
      autofocus={true}
      className="menu-button__menu menu"
      tabIndex={-1}
    >
      <div
        className="menu__items"
        role="menu"
      >
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 1
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 2
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
        <div
          className="menu-button__item menu__item"
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="menuitem"
          tabIndex={0}
        >
          <span
            aria-hidden={false}
          >
            item 3
          </span>
          <svg
            aria-hidden={true}
            className="icon icon--tick-16"
            focusable={false}
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlinkHref="#icon-tick-16"
            />
          </svg>
        </div>
      </div>
    </div>
  </span>,
]
`;

exports[`Storyshots ebay-menu-button With Custom Label 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span
          style={
            Object {
              "background": "url(\\"data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='25' height='15' viewBox='0 0 5 3'%3E%3Cpath d='M0 0h5v3H0z'/%3E%3Cpath fill='%23D00' d='M0 1h5v2H0z'/%3E%3Cpath fill='%23FFCE00' d='M0 2h5v1H0z'/%3E%3C/svg%3E\\") no-repeat 50% 50%",
              "display": "inline-block",
              "height": "20px",
              "marginRight": "8px",
              "verticalAlign": "middle",
              "width": "26px",
            }
          }
        />
        Fun with flags!
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 1
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button With Separator 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <span>
          Complex menu
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 1
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <hr
        checked={false}
        className="menu-button__item menu-button__separator"
        focused={false}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="separator"
        tabIndex={0}
      />
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 4
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 5
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <hr
        checked={false}
        className="menu-button__item menu-button__separator"
        focused={false}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="separator"
        tabIndex={0}
      />
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          Log in
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button With icon 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span
      className="btn__cell"
    >
      <span
        className="btn__text"
      >
        <svg
          aria-hidden={true}
          className="icon icon--settings-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-settings-16"
          />
        </svg>
        <span>
          Settings
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="icon icon--chevron-down-16"
        focusable={false}
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlinkHref="#icon-chevron-down-16"
        />
      </svg>
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 1 that has very long text
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;

exports[`Storyshots ebay-menu-button Without toggle icon 1`] = `
<span
  className="menu-button"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    aria-live={null}
    className="btn menu-button__button btn--secondary"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <span>
      Menu
    </span>
  </button>
  <div
    autofocus={true}
    className="menu-button__menu menu"
    tabIndex={-1}
  >
    <div
      className="menu__items"
      role="menu"
    >
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 1 that has very long text
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 2
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
      <div
        className="menu-button__item menu__item"
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="menuitem"
        tabIndex={0}
      >
        <span
          aria-hidden={false}
        >
          item 3
        </span>
        <svg
          aria-hidden={true}
          className="icon icon--tick-16"
          focusable={false}
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlinkHref="#icon-tick-16"
          />
        </svg>
      </div>
    </div>
  </div>
</span>
`;
